Refactor checkout flow: separate CheckoutService from OrderService